# carshift-rs

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
carshift/: Cargo.toml
carshift-db/: Cargo.toml
carshift-db/migrations/: 20250725230451_cars.sql  20250831191446_add_car_picture.sql
carshift-db/src/: car.rs  db_ref.rs  lib.rs  user.rs
carshift-handlers/: Cargo.toml
carshift-handlers/src/: lib.rs  profile.rs
carshift-handlers/src/blocks/: mod.rs
carshift-handlers/src/car/: add.rs  mod.rs  user.rs
carshift-handlers/src/search/: cars.rs  users.rs
carshift-handlers/src/user/: display.rs  login.rs  mod.rs  picture.rs  register.rs  settings.rs
carshift-mw/: Cargo.toml
carshift-mw/src/: lib.rs
carshift-templ/: Cargo.toml
carshift-templ/src/: lib.rs
carshift-templ/templates/: add-car.html  base.html  car.html  home.html  profile.html  search-cars.html  search-users.html
carshift-templ/templates/components/: footer.html  navbar.html  sortings.html  tabbed.html
carshift-templ/templates/hx-blocks/: alert.html  cars.html  navbar-info.html  user-cars.html  users.html
carshift-templ/templates/inputs/: email.html  firstname.html  lastname.html  password.html  phone.html  username.html
carshift-templ/templates/settings/: profile.html
carshift-utils/: Cargo.toml
carshift-utils/src/: error.rs  extractors.rs  log.rs
carshift/src/: main.rs
cs-cli/: Cargo.toml
cs-database/: Cargo.toml
cs-database/src/: lib.rs
cs-handlers/: Cargo.toml
cs-handlers/src/: profile.rs
cs-handlers/src/search/: cars.rs  mod.rs  users.rs
cs-handlers/src/user/: login.rs  register.rs
cs-middlewares/: Cargo.toml
cs-misc/: Cargo.toml
cs-misc/src/: error.rs  lib.rs
cs-templ/: Cargo.toml
cs-templ/templates/: card-base.html  login.html  search-cars.html  search-users.html  settings.html
cs-templ/templates/hx-blocks/: cars.html
cs-templ/templates/inputs/: lastname.html  password.html
migrations/: 20250415154047_users.sql  20250502145451_cars.sql  20250504003505_rename_car_date.sql
migrations/03-districts/: up.sql
src/: error.rs  log.rs  main.rs  templ.rs
src/db/: car.rs  mod.rs  user.rs
src/extractors/: mod.rs
src/handlers/: mod.rs  profile.rs
src/handlers/auth/: login.rs  mod.rs  register.rs
src/handlers/blocks/: mod.rs
src/handlers/car/: mod.rs
src/handlers/components/: mod.rs
src/handlers/search/: cars.rs  users.rs
src/handlers/user/: login.rs  mod.rs  picture.rs  register.rs  settings.rs
src/middlewares/: mod.rs
src/misc/: mod.rs
src/misc/extractors/: mod.rs
src/misc/macros/: html.rs  mod.rs
src/templ/: mod.rs
static/css/: input.css  output.css
static/js/: htmx-null-empty.js  htmx-rm.js  htmx-size-limit.js  pikaday.js
templates/: base.html  card-base.html  home.html  login.html  profile.html  register.html  search-cars.html  search-users.html  settings.html
templates/blocks/: cars.html  users.html
templates/components/: alert.html  navbar-info.html  navbar.html  pfp.html  tabbed.html
templates/hx-blocks/: cars.html
templates/inputs/: phone.html  username.html
templates/settings/: account.html  profile.html
