[workspace]
resolver = "3"
members = ["cs-*"]
default-members = ["cs-cli"]

[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true
lto = false
debug = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
panic = "abort"
strip = true
lto = "fat"
codegen-units = 1

[patch.crates-io]
r2d2_sqlite = { git = 'https://github.com/untemi/r2d2-sqlite', branch = 'master' }

[workspace.dependencies]
anyhow = "1.0.97"
askama = "0.13.0"
axum = "0.8.3"
axum_typed_multipart = "0.16.0"
chrono = { version = "0.4.40", features = ["serde"] }
colored = "3.0.0"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
tower-sessions = "0.14.0"
validator = { version = "0.20.0", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.28.0", features = ["chrono"] }
