[workspace]
resolver = "3"
default-members = ["carshift"]
members = [
  "carshift",
  "carshift-db",
  "carshift-handlers",
  "carshift-mw",
  "carshift-templ",
  "carshift-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true
lto = false
debug = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
panic = "abort"
strip = true
lto = "fat"
codegen-units = 1

[workspace.dependencies]
axum = "0.8.3"
serde = "1.0.219"
anyhow = "1.0.97"
askama = "0.13.0"
colored = "3.0.0"
tower-sessions = "0.14.0"
axum_typed_multipart = "0.16.0"
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
