[package]
name = "db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true

tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
] }
