[package]
name = "db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true

sled = "0.34.7"
tower-sessions-sled-store = "0.2.0"
sqlx = { version = "0.8", default-features = false, features = [
  "macros",
  "runtime-tokio",
  "sqlite",
  "chrono",
  "migrate",
] }
