[package]
name = "db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true

sled = "0.34.7"
tower-sessions-sled-store = "0.2.0"
sqlx = { version = "0.9.0", default-features = false, features = [
  "macros",
  "runtime-tokio",
  "sqlite",
  "chrono",
  "migrate",
] }
