[package]
name = "handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
csutils.path = "../carshift-utils"
db.path = "../carshift-db"
templ.path = "../carshift-templ"
mw.path = "../carshift-mw"

axum.workspace = true
serde.workspace = true
tokio.workspace = true
chrono.workspace = true
validator.workspace = true
tower-sessions.workspace = true
axum_typed_multipart.workspace = true

lazy_static = "1.5.0"
is_empty = "0.3.0"
serde_with = "3.12.0"
regex = "1.11.1"
fancy-regex = "0.14.0"
paste = "1.0.15"
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
bcrypt = "0.17.0"
