[package]
name = "csutils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
validator.workspace = true
chrono.workspace = true
serde.workspace = true
axum.workspace = true
axum_typed_multipart.workspace = true
tokio.workspace = true
anyhow.workspace = true

colored = "3.0.0"
thiserror = "2.0.12"
