[package]
name = "carshift"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
db.path = "../carshift-db"
mw.path = "../carshift-mw"
csutils.path = "../carshift-utils"
handlers.path = "../carshift-handlers"

anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower-sessions.workspace = true

mimalloc = "0.1.46"
tower-http = { version = "0.6.2", features = ["fs"] }
