[package]
name = "cs-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
cs-misc = { path = "../cs-misc" }
handlers = { package = "cs-handlers", path = "../cs-handlers" }
middlewares = { package = "cs-middlewares", path = "../cs-middlewares" }

anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tower-sessions = { workspace = true }

mimalloc = "0.1.46"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions-r2d2-sqlite-store = { git = "https://github.com/untemi/tower-sessions-r2d2-sqlite-store", branch = "main" }
