[package]
name = "cs-database"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
anyhow = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

include_dir = "0.7.4"
rusqlite_migration = { version = "2.1.0", features = ["from-directory"] }
